Add a button to options, to clear the etag cache

--- a/src/options.html
+++ b/src/options.html
@@ -3,7 +3,7 @@
   <head><title>Assemblyline Options</title></head>
   <body>
     <p>
-      <label for='token'>token</label>
+      <label for="token">token</label>
       <input type="password" id="token" size="30">
     </p>
     <p>
@@ -12,6 +12,13 @@
     <p>
       <button id="save">Save</button>
     </p>
-    <script src='options.js'></script>
+    <hr />
+    <p id="cache-info">
+      Cache:
+    </p>
+    <p>
+      <button id="cache">Clear Cache</button>
+    </p>
+    <script src="options.js"></script>
   </body>
 </html>
