Allow users to set the environments to deploy to in options

--- a/src/options.html
+++ b/src/options.html
@@ -3,6 +3,13 @@
   <head><title>Assemblyline Options</title></head>
   <body>
     <p>
+      <label for="environments">environments</label>
+      <input id="environments" size="30">
+    </p>
+    <p>
+      List the environments that you want to deploy to, comma seperated.
+    </p>
+    <p>
       <label for="token">token</label>
       <input type="password" id="token" size="30">
     </p>
